--- a/.github/workflows/dummy_deploy.yml
+++ b/.github/workflows/dummy_deploy.yml
@@ -17,11 +17,9 @@ jobs:
           echo $current_hour
           if [ "$current_hour" -ge 17 ]; then
             echo "::set-output name=stop_deployment::true"
+            exit 0
           else
             echo "::set-output name=stop_deployment::false"
           fi
-      - name: Stop deployment if past 5 PM
-        if: steps.check_time.outputs.stop_deployment == 'true'
-        run: exit 0
       - name: My Deployment
         run : echo "Hello"
